--- a/appengine/app/view/linebot/help.html
+++ b/appengine/app/view/linebot/help.html
@@ -1,1 +1,100 @@
-init help.
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>ヘルプ | ももクロ LINE BOT 通知のふ</title>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+</head>
+<body>
+
+<nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">ももクロ LINE BOT 通知のふ</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
+
+<div class="container">
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">機能</h3>
+        </div>
+        <div class="list-group">
+            <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">通知</h4>
+                <div class="list-group-item-text">
+                    <p>下記の更新情報を LINE Notify を経由して通知します。</p>
+                    <ul>
+                        <li>ももクロちゃんのブログ</li>
+                        <li>AEニュース</li>
+                        <li>ニュータイプ放送局</li>
+                        <li>momocloTV の配信</li>
+                        <li>ラジオ等のリマインダー（10分前）</li>
+                    </ul>
+                </div>
+            </a>
+            <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">コマンド</h4>
+                <p class="list-group-item-text">BOT に向けてメッセージを送ると、よしなに返事をしてくれるオマケ機能。</p>
+            </a>
+        </div>
+    </div>
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">コマンド</h3>
+        </div>
+        <div class="list-group">
+            <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">おん</h4>
+                <p class="list-group-item-text">通知連携の設定をするURLを返します。</p>
+            </a>
+            <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">おふ</h4>
+                <p class="list-group-item-text">通知連携の解除をするURLを返します。</p>
+            </a>
+            <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">メンバーの名前</h4>
+                <p class="list-group-item-text">それぞれメンバーの画像が返ります。
+                    例えば、かなこちゃんと送ると百田夏菜子さんの画像が返ってきます。</p>
+            </a>
+        </div>
+    </div>
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">止めたいとき</h3>
+        </div>
+        <div class="panel-body">
+            <p>通知連携を解除し、LINE BOT をブロックしてください。</p>
+        </div>
+    </div>
+
+</div><!-- /.container -->
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
+</html>
