Add images for help page

--- a/appengine/app/view/linebot/help.html
+++ b/appengine/app/view/linebot/help.html
@@ -84,10 +84,47 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
+            <h3 class="panel-title">通知連携</h3>
+        </div>
+        <div class="panel-body">
+            <p>
+                <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseEnable" aria-expanded="false" aria-controls="collapseEnable">
+                    連携の説明をみる
+                </a>
+                <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseDisable" aria-expanded="false" aria-controls="collapseDisable">
+                    解除の説明をみる
+                </a>
+            </p>
+            <div class="collapse" id="collapseEnable">
+                <img src="/images/linenotify/on_1.png">
+                <img src="/images/linenotify/on_2.png">
+                <img src="/images/linenotify/on_3.png">
+            </div>
+            <div class="collapse" id="collapseDisable">
+                <img src="/images/linenotify/off_1.png">
+                <img src="/images/linenotify/off_2.png">
+                <img src="/images/linenotify/off_3.png">
+            </div>
+        </div>
+    </div>
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
             <h3 class="panel-title">止めたいとき</h3>
         </div>
         <div class="panel-body">
             <p>通知連携を解除し、LINE BOT をブロックしてください。</p>
+        </div>
+    </div>
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">お問い合わせ</h3>
+        </div>
+        <div class="panel-body">
+            <p>
+                <a href="https://twitter.com/utahta">@utahta</a> までご連絡ください。
+            </p>
         </div>
     </div>
 
