Update help page

--- a/appengine/app/view/linebot/help.html
+++ b/appengine/app/view/linebot/help.html
@@ -91,19 +91,23 @@
                 <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseEnable" aria-expanded="false" aria-controls="collapseEnable">
                     連携の説明をみる
                 </a>
-                <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseDisable" aria-expanded="false" aria-controls="collapseDisable">
-                    解除の説明をみる
-                </a>
             </p>
             <div class="collapse" id="collapseEnable">
                 <img src="/images/linenotify/on_1.png">
                 <img src="/images/linenotify/on_2.png">
                 <img src="/images/linenotify/on_3.png">
+                <img src="/images/linenotify/on_4.png">
             </div>
+            <p>
+                <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapseDisable" aria-expanded="false" aria-controls="collapseDisable">
+                    解除の説明をみる
+                </a>
+            </p>
             <div class="collapse" id="collapseDisable">
                 <img src="/images/linenotify/off_1.png">
                 <img src="/images/linenotify/off_2.png">
                 <img src="/images/linenotify/off_3.png">
+                <img src="/images/linenotify/off_4.png">
             </div>
         </div>
     </div>
