--- a/appengine/app/view/linebot/help.html
+++ b/appengine/app/view/linebot/help.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ヘルプ | ももクロ LINE BOT 通知のふ</title>
+    <title>ヘルプ | LINE BOT 通知のふ</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">ももクロ LINE BOT 通知のふ</a>
+            <a class="navbar-brand" href="#">LINE BOT 通知のふ</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
@@ -56,7 +56,7 @@
             </a>
             <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">コマンド</h4>
-                <p class="list-group-item-text">BOT に向けてメッセージを送ると、よしなに返事をしてくれるオマケ機能。</p>
+                <p class="list-group-item-text">BOT に向けて特定のメッセージを送ると、それに応じた返事をします。</p>
             </a>
         </div>
     </div>
