--- a/appengine/app/view/linebot/about.html
+++ b/appengine/app/view/linebot/about.html
@@ -42,7 +42,7 @@
         </div>
         <div class="panel-body">
             <p><a href="https://line.me/R/ti/p/%40zen8019l"><img height="36" border="0" alt="友だち追加数" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a></p>
-            <p>ももクロちゃんのブログやAE NEWS等を通知する機能と連携したり、画像を返したりするBOTです。</p>
+            <p>ももクロちゃんのブログやAE NEWS等を通知する機能との連携を補助したり、画像を返したりするBOTです。</p>
             <p>個人の趣味で開発・運用しています。</p>
             <p>ご利用は自己責任でお願いいたします。</p>
             <p></p>
