Update linebot info

--- a/appengine/app/view/linebot/about.html
+++ b/appengine/app/view/linebot/about.html
@@ -42,14 +42,13 @@
         </div>
         <div class="panel-body">
             <p><a href="https://line.me/R/ti/p/%40zen8019l"><img height="36" border="0" alt="友だち追加数" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a></p>
-            <p>ももクロちゃんのブログやAE NEWS等を通知する機能との連携を補助したり、画像を返したりするBOTです。</p>
-            <p>個人の趣味で開発・運用しています。</p>
-            <p>ご利用は自己責任でお願いいたします。</p>
-            <p></p>
+            <p>こちらは、LINE アカウント版の通知のふです。Twitterは<a href="https://twitter.com/botnofu">こちら</a>。</p>
+            <p>ももいろクローバーZ についての色々な更新情報を LINE で受けとれるようにしたり、ざつに画像を探したりする BOT です。</p>
+            <p>友だち追加をポチると、通知のふという LINE アカウントと友だちになります。</p>
+            <p>その後よしなにすると、下記画像のような通知が受けとれるようになります。詳しい説明は、<a href="/linebot/help">ヘルプ</a>をご覧ください。</p>
             <img src="/images/linenotify/sample.png">
         </div>
     </div>
-
 </div><!-- /.container -->
 
 <!-- Latest compiled and minified JavaScript -->
