--- a/appengine/app/view/linebot/help.html
+++ b/appengine/app/view/linebot/help.html
@@ -46,9 +46,10 @@
                 <div class="list-group-item-text">
                     <p>下記の更新情報を LINE Notify を経由して通知します。</p>
                     <ul>
-                        <li>ももクロちゃんのブログ</li>
+                        <li>ももいろクローバーZ 各メンバーのブログ</li>
                         <li>AEニュース</li>
                         <li>ニュータイプ放送局</li>
+                        <li>ハピクロ</li>
                         <li>momocloTV の配信</li>
                         <li>ラジオ等のリマインダー（10分前）</li>
                     </ul>
@@ -56,7 +57,7 @@
             </a>
             <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">コマンド</h4>
-                <p class="list-group-item-text">BOT に向けて特定のメッセージを送ると、それに応じた返事をします。</p>
+                <p class="list-group-item-text">通知のふ LINE アカウントに向けて特定のメッセージを送ると、それに応じた返事をします。</p>
             </a>
         </div>
     </div>
@@ -84,7 +85,7 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h3 class="panel-title">通知連携</h3>
+            <h3 class="panel-title">通知連携の詳しい説明</h3>
         </div>
         <div class="panel-body">
             <p>
@@ -117,7 +118,7 @@
             <h3 class="panel-title">止めたいとき</h3>
         </div>
         <div class="panel-body">
-            <p>通知連携を解除し、LINE BOT をブロックしてください。</p>
+            <p>通知連携を解除し、通知のふ LINE アカウントをブロックしてください。</p>
         </div>
     </div>
 
