Update README, about and help page

--- a/appengine/app/view/linebot/help.html
+++ b/appengine/app/view/linebot/help.html
@@ -24,10 +24,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">LINE BOT 通知のふ</a>
+            <a class="navbar-brand" href="/linebot/about">LINE BOT 通知のふ</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                <li><a href="/linebot/help">ヘルプ</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -41,10 +42,10 @@
             <h3 class="panel-title">機能</h3>
         </div>
         <div class="list-group">
-            <a href="#" class="list-group-item">
+            <div class="list-group-item">
                 <h4 class="list-group-item-heading">通知</h4>
                 <div class="list-group-item-text">
-                    <p>下記の更新情報を LINE Notify を経由して通知します。</p>
+                    <p>下記の更新情報を <a href="https://notify-bot.line.me/ja/" target="_blank">LINE Notify</a> を経由して通知します。</p>
                     <ul>
                         <li>ももいろクローバーZ 各メンバーのブログ</li>
                         <li>AEニュース</li>
@@ -54,11 +55,11 @@
                         <li>ラジオ等のリマインダー（10分前）</li>
                     </ul>
                 </div>
-            </a>
-            <a href="#" class="list-group-item">
+            </div>
+            <div class="list-group-item">
                 <h4 class="list-group-item-heading">コマンド</h4>
                 <p class="list-group-item-text">通知のふ LINE アカウントに向けて特定のメッセージを送ると、それに応じた返事をします。</p>
-            </a>
+            </div>
         </div>
     </div>
 
@@ -67,19 +68,19 @@
             <h3 class="panel-title">コマンド</h3>
         </div>
         <div class="list-group">
-            <a href="#" class="list-group-item">
+            <div class="list-group-item">
                 <h4 class="list-group-item-heading">おん</h4>
                 <p class="list-group-item-text">通知連携の設定をするURLを返します。</p>
-            </a>
-            <a href="#" class="list-group-item">
+            </div>
+            <div class="list-group-item">
                 <h4 class="list-group-item-heading">おふ</h4>
                 <p class="list-group-item-text">通知連携の解除をするURLを返します。</p>
-            </a>
-            <a href="#" class="list-group-item">
+            </div>
+            <div class="list-group-item">
                 <h4 class="list-group-item-heading">メンバーの名前</h4>
                 <p class="list-group-item-text">それぞれメンバーの画像が返ります。
                     例えば、かなこちゃんと送ると百田夏菜子さんの画像が返ってきます。</p>
-            </a>
+            </div>
         </div>
     </div>
 
