--- a/appengine/app/view/linebot/about.html
+++ b/appengine/app/view/linebot/about.html
@@ -24,10 +24,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">LINE BOT 通知のふ</a>
+            <a class="navbar-brand" href="/linebot/about">LINE BOT 通知のふ</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                <li><a href="/linebot/help">ヘルプ</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -41,11 +42,11 @@
             <h3 class="panel-title">通知のふについて</h3>
         </div>
         <div class="panel-body">
+            <h3>LINE BOT 通知のふ とは？</h3>
             <p><a href="https://line.me/R/ti/p/%40zen8019l"><img height="36" border="0" alt="友だち追加数" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a></p>
-            <p>こちらは、LINE アカウント版の通知のふです。Twitterは<a href="https://twitter.com/botnofu">こちら</a>。</p>
-            <p>ももいろクローバーZ についての色々な更新情報を LINE で受けとれるようにしたり、ざつに画像を探したりする BOT です。</p>
-            <p>友だち追加をポチると、通知のふという LINE アカウントと友だちになります。</p>
-            <p>その後よしなにすると、下記画像のような通知が受けとれるようになります。詳しい説明は、<a href="/linebot/help">ヘルプ</a>をご覧ください。</p>
+            <p>ももいろクローバーZの様々な情報を LINE で受け取れるようにするツールです。</p>
+            <p>友だち追加ボタンから友だちになると、更新がある毎に下の画像のような通知がやってきます。</p>
+            <p>完全に無料です！連携方法などの詳しい説明は、<a href="/linebot/help">ヘルプ</a>をご覧ください。</p>
             <img src="/images/linenotify/sample.png">
         </div>
     </div>
