--- a/app/backend/view/linebot/about.html
+++ b/app/backend/view/linebot/about.html
@@ -45,8 +45,8 @@
             <h3>LINE BOT 通知のふ とは？</h3>
             <p><a href="https://line.me/R/ti/p/%40zen8019l"><img height="36" border="0" alt="友だち追加数" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a></p>
             <p>ももいろクローバーZの様々な情報を LINE で受け取れるようにするツールです。</p>
-            <p>友だち追加ボタンから友だちになると、更新がある毎に下の画像のような通知がやってきます。</p>
-            <p>完全に無料です！連携方法などの詳しい説明は、<a href="/linebot/help">ヘルプ</a>をご覧ください。</p>
+            <p>通知機能の <a href="https://notify-bot.line.me/ja/" target="_blank">LINE Notify</a> と連携するための窓口であり、ちょっとしたお遊びコマンドも備えてます。</p>
+            <p>連携方法などの詳しい説明は、<a href="/linebot/help">ヘルプ</a>をご覧ください。</p>
             <img src="/images/linenotify/sample.png">
         </div>
     </div>
