--- a/app/backend/view/linebot/help.html
+++ b/app/backend/view/linebot/help.html
@@ -43,7 +43,7 @@
         </div>
         <div class="list-group">
             <div class="list-group-item">
-                <h4 class="list-group-item-heading">通知</h4>
+                <h4 class="list-group-item-heading">通知連携</h4>
                 <div class="list-group-item-text">
                     <p>下記の更新情報を <a href="https://notify-bot.line.me/ja/" target="_blank">LINE Notify</a> を経由して通知します。</p>
                     <ul>
@@ -70,11 +70,11 @@
         <div class="list-group">
             <div class="list-group-item">
                 <h4 class="list-group-item-heading">おん</h4>
-                <p class="list-group-item-text">通知連携の設定をするURLを返します。</p>
+                <p class="list-group-item-text">通知連携するための URL を返します。</p>
             </div>
             <div class="list-group-item">
                 <h4 class="list-group-item-heading">おふ</h4>
-                <p class="list-group-item-text">通知連携の解除をするURLを返します。</p>
+                <p class="list-group-item-text">通知連携を解除するための URL を返します。</p>
             </div>
             <div class="list-group-item">
                 <h4 class="list-group-item-heading">メンバーの名前</h4>
@@ -116,10 +116,27 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            <h3 class="panel-title">止めたいとき</h3>
+            <h3 class="panel-title">FAQ</h3>
         </div>
-        <div class="panel-body">
-            <p>通知連携を解除し、通知のふ LINE アカウントをブロックしてください。</p>
+        <div class="list-group">
+            <div class="list-group-item">
+                <h4 class="list-group-item-heading">グループ宛に通知したいときは？</h4>
+                <div class="list-group-item-text">
+                    連携設定するときにグループを選択し、そのグループに LINE Notify を招待してください。
+                </div>
+            </div>
+            <div class="list-group-item">
+                <h4 class="list-group-item-heading">お金はかかりますか？</h4>
+                <div class="list-group-item-text">
+                    かかりません。無料です。もっぱら費用かからないように運営しています。
+                </div>
+            </div>
+            <div class="list-group-item">
+                <h4 class="list-group-item-heading">止めたいときは？</h4>
+                <div class="list-group-item-text">
+                    通知連携を解除し、通知のふ LINE アカウントをブロックしてください。
+                </div>
+            </div>
         </div>
     </div>
 
