Add batch service
Remove queue service
Improve routes

--- a/appengine/backend/public/templates/linebot/about.html
+++ b/appengine/backend/public/templates/linebot/about.html
@@ -24,11 +24,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/linebot/about">LINE BOT 通知のふ</a>
+            <a class="navbar-brand" href="/line/bot/about">LINE BOT 通知のふ</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/linebot/help">ヘルプ</a></li>
+                <li><a href="/line/bot/help">ヘルプ</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -46,7 +46,7 @@
             <p><a href="https://line.me/R/ti/p/%40zen8019l"><img height="36" border="0" alt="友だち追加数" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a></p>
             <p>ももいろクローバーZの様々な情報を LINE で受け取れるようにするツールです。</p>
             <p>通知機能の <a href="https://notify-bot.line.me/ja/" target="_blank">LINE Notify</a> と連携するための窓口であり、ちょっとしたお遊びコマンドも備えてます。</p>
-            <p>連携方法などの詳しい説明は、<a href="/linebot/help">ヘルプ</a>をご覧ください。</p>
+            <p>連携方法などの詳しい説明は、<a href="/line/bot/help">ヘルプ</a>をご覧ください。</p>
             <img src="/images/linenotify/sample.png">
         </div>
     </div>
