--- a/appengine/backend/public/templates/linebot/help.html
+++ b/appengine/backend/public/templates/linebot/help.html
@@ -24,11 +24,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/linebot/about">LINE BOT 通知のふ</a>
+            <a class="navbar-brand" href="/line/bot/about">LINE BOT 通知のふ</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/linebot/help">ヘルプ</a></li>
+                <li><a href="/line/bot/help">ヘルプ</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
