--- a/appengine/backend/public/templates/linebot/about.html
+++ b/appengine/backend/public/templates/linebot/about.html
@@ -43,11 +43,23 @@
         </div>
         <div class="panel-body">
             <h3>LINE BOT 通知のふ とは？</h3>
+            <p>ももいろクローバーZの様々な情報を LINE で受け取ることができるツールです。</p>
+            <p><a href="https://notify-bot.line.me/ja/" target="_blank">LINE Notify</a> と連携するための窓口であり、ちょっとしたお遊びコマンドも備えてます。</p>
+            <p>興味ある方は、以下から友だち追加してください。</p>
             <p><a href="https://line.me/R/ti/p/%40zen8019l"><img height="36" border="0" alt="友だち追加数" src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png"></a></p>
-            <p>ももいろクローバーZの様々な情報を LINE で受け取れるようにするツールです。</p>
-            <p>通知機能の <a href="https://notify-bot.line.me/ja/" target="_blank">LINE Notify</a> と連携するための窓口であり、ちょっとしたお遊びコマンドも備えてます。</p>
-            <p>連携方法などの詳しい説明は、<a href="/line/bot/help">ヘルプ</a>をご覧ください。</p>
+            <p>連携方法の詳しい説明は、<a href="/line/bot/help">ヘルプ</a>をご覧ください。</p>
             <img src="/images/linenotify/sample.png">
+        </div>
+    </div>
+
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <h3 class="panel-title">通知のふBOTと友だちにならずに、LINEで情報を受け取りたいという方へ</h3>
+        </div>
+        <div class="panel-body">
+            <p>スマートフォンから<a href="/line/notify/on">こちら</a>をクリックしてください。すぐさま連携ページへ飛びます。</p>
+            <p>解除は<a href="https://notify-bot.line.me/my/">こちら</a>からできます。</p>
+            <p>不明点については、<a href="/line/bot/help">ヘルプ</a>をご覧ください。</p>
         </div>
     </div>
 </div><!-- /.container -->
