--- a/appengine/backend/public/templates/linebot/about.html
+++ b/appengine/backend/public/templates/linebot/about.html
@@ -57,7 +57,7 @@
             <h3 class="panel-title">通知のふBOTと友だちにならずに、LINEで情報を受け取りたいという方へ</h3>
         </div>
         <div class="panel-body">
-            <p>スマートフォンから<a href="/line/notify/on">こちら</a>をクリックしてください。すぐさま連携ページへ飛びます。</p>
+            <p>スマートフォンのブラウザ(Safariなど)から<a href="/line/notify/on">こちら</a>をクリックしてください。すぐさま連携ページへ飛びます。</p>
             <p>解除は<a href="https://notify-bot.line.me/my/">こちら</a>からできます。</p>
             <p>不明点については、<a href="/line/bot/help">ヘルプ</a>をご覧ください。</p>
         </div>
