--- a/appengine/backend/public/templates/linebot/help.html
+++ b/appengine/backend/public/templates/linebot/help.html
@@ -146,7 +146,7 @@
         </div>
         <div class="panel-body">
             <p>
-                <a href="https://twitter.com/utahta">@utahta</a> までご連絡ください。
+                <a href="https://twitter.com/botnofu">@botnofu</a> までご連絡ください。
             </p>
         </div>
     </div>
